--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -9,12 +9,9 @@
         <a th:href="@{/people/{id}(id=${person.getId()})}"
                 th:text="${person.getFullName()}">user</a>
     </div>
+    <br/>
+    <form th:type="GET" th:action="@{/people/new}">
+        <input type="submit" value="Create new person">
+    </form>
 </body>
 </html>
-
-<!--
-<div th:each="person : ${people}">
-    <a th:href="@{/people/{id}(id=${person.getId()})}"
-       th:text="${person.getName() + ', ' + person.getAge()}">user</a>
-</div>
--->
