Added the functionality of updating the data of an entry in database table corresponding to our model - an object of the Person class. Created html view of the update with a redirect to the viewing page. From the person's viewing page, now you can go to the page of all users or to update the current person.

--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -9,9 +9,12 @@
 <p th:text="${person.getFullName()}">full name</p>
 <p th:text="${'age: ' + person.getAge()}">age</p>
 <p th:text="${'Email: ' + person.getEmail()}">email</p>
+<form th:method="GET" th:action="@{/people/edit/{id}(id=${person.getId()})}">
+  <input type="submit" value="Edit"/>
+</form>
 <br/>
-<form th:method = "GET" th:action="@{/people/edit}" th:object="person">
-  <input type="submit" value="Edit">
+<form th:method="GET" th:action="@{/people}">
+  <input type="submit" value="Show people"/>
 </form>
 </body>
 </html>
