Added functionality to delete an existing person. I also fixed bugs related to the validation of input parameters caused by the migration of javax libraries to jakarta.

--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -13,8 +13,13 @@
   <input type="submit" value="Edit"/>
 </form>
 <br/>
+<form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
+  <input type="submit" value="Delete">
+</form>
+<hr/>
 <form th:method="GET" th:action="@{/people}">
   <input type="submit" value="Show people"/>
 </form>
+
 </body>
 </html>
