--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <form th:method="POST" th:action="@{/people}" th:object="${person}">
-    <label for="first name">Enter first name:</label>
-    <input type="text" th:field="*{firstName}" id="first name"/>
+    <label for="firstName">Enter first name:</label>
+    <input type="text" th:field="*{firstName}" id="firstName"/>
     <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">first name error</div>
     <br/>
-    <label for="last name">Enter last name:</label>
-    <input type="text" th:field="*{lastName}" id="last name"/>
+    <label for="lastName">Enter last name:</label>
+    <input type="text" th:field="*{lastName}" id="lastName"/>
     <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">last name error</div>
     <br/>
     <label for="age">Enter age:</label>
