Added tests to compare the speed of the update methods in the loop & batch Update JdbcTemplate.

--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -13,5 +13,9 @@
     <form th:type="GET" th:action="@{/people/new}">
         <input type="submit" value="Create new person">
     </form>
+    <hr/>
+    <form th:type="GET" th:action="@{/test-batch-update}">
+        <input type="submit" value="Test batch update">
+    </form>
 </body>
 </html>
